--- a/smashing_trial_4.html
+++ b/smashing_trial_4.html
@@ -146,7 +146,10 @@
               </li>
 
               <li class="menu-item-wordpress">
-                <a href="#">wordpress</a>
+                <a href="#">
+                  <span class="long">wordpress</span>
+                  <span class="short">wp</span>
+                  </a>
                 <ul class="sub-menu">
                   <li class="menu-item-essentials">
                     <a href="#">Essentials</a>
@@ -252,6 +255,98 @@
       </div>
     </div>
    </main>
+
+   <aside id="sidebar" class="sb">
+    <div class="col side">
+      <section class="mise sf cf">
+        <form id="search" method="post" action="#">
+          <label for="searchb" class="searchl">Search on Smashing Magazine</label>
+          <input type="text" id="searchb" placeholder="e.g. JavaScript">
+          <button type="submit" class="button-search">Search</button>
+        </form>
+      </section>
+      
+      <section class="bw faw">
+      <p class="awithus"><a href="#">Become a sponsor!</a></p>
+    </section>
+
+    <section class="sf wg">
+      <h3>
+        <a href="#">
+          <img alt="#" src="assets/smnl.png">
+          Smashing Newsletter
+        </a>
+      </h3>
+      <p>Subscribe to our email newsletter for useful tips and valuable resources, sent out every second Tuesday.</p>
+      <div class="mcf">
+        <form method="post" action="">
+          <label for="nl-email" class="sr">Please provide us with your email address:</label>
+          <input id="nl-email" name="EMAIL" type="text" placeholder="email address">
+          <button id="nl-submit" type="submit" name="subscribe">Subscribe</button>
+        </form>
+        <a href="#">
+          <img src="assets/mc-counter.svg" class="mcc" alt="#">
+        </a>
+      </div>
+    </section>
+
+    <section class="so wg">
+      <div class="fir">
+        <a href="#">
+          <img alt="#" src="assets/design_book.png">
+        </a>
+        <p>Smashing Book 5: "Real-Life Responsive Web Design", our playbook to master all the tricky facets and hurdles of <strong>responsive web design</strong>. Gorgeous hardcover with 584 pages. The eBook is included. Free worldwide shipping. <a href="#">Get your book now!</a></p>
+      </div>
+      <div class="sec">
+        <a href="#">
+          <img alt="#" src="assets/design_book.png">
+        </a>
+        <p>Today, too many websites are still inaccessible. In our new book Inclusive Design Patterns, we explore how to craft flexible front-end design patterns and make future-proof and accessible interfaces without extra effort. Hardcover, 312 pages. <a href="#">Get the book →</a></p>
+      </div>
+      <div class="thr">
+        <a href="#">
+          <img alt="#" src="assets/design_book.png">
+        </a>
+        <p>With responsive design, creating Photoshop mock-ups is just inefficient. In the new anniversary edition of Hardboiled Web Design, Andy Clarke shows how to improve workflow, craft better front-end, establish style guides and reduce wasted time. <a href="#">Get the book.</a></p>
+      </div>
+    </section>
+
+    <section class="mt wg">
+      <a href="#">
+        <img alt="#" src="assets/mediatemple.svg">
+      </a>
+      <p>We are proudly hosted on<br>Media Temple Dedicated Servers. Performance matters.</p>
+    </section>
+
+    <section class="wg">
+      <h3>
+        <a href="#">
+          <span>Smashing Job Board</span>
+          <img alt="#" src="assets/sm-jobs.png">
+        </a>
+      </h3>
+      <ul class="jobs">
+        <li class="cf">
+          <a href="#">
+            Senior WordPress Developer, Stanford Law School - Stanford Law School - (Stanford, CA) - FullTime
+          </a>
+          <p>JOB PURPOSE: Stanford Law School (SLS) is looking for a full-stack WordPress developer to join the Web Team in the Office of Communications and Public ...</p>
+        </li>
+        <li class="cf">
+          <a href="#">
+Full Stack JavaScript Developer - Wolters Kluwer - (Alphen aan den Rijn) - FullTime
+          </a>
+          <p>Job Summary 
+ Want to be a part of fast growing agile team? We are using best tools and practices available today and we are passionate about what we are ...
+</p>
+        </li>
+      </ul>
+      <a href="#" class="rm">View more job openings...</a>
+    </section>
+
+
+    </div>
+   </aside>
 
    <footer>
     <p class="f-content">
