made w3c validator corrections

--- a/smashing_trial_4.html
+++ b/smashing_trial_4.html
@@ -48,6 +48,7 @@
         <div class="grid cf">
 
          <section class="mise sf cf">
+          <h6>Site Search</h6>
           <form id="search" method="post" action="#">
             <label for="searchb" class="searchl">Search on Smashing Magazine</label>
             <input type="text" id="searchb" placeholder="e.g. JavaScript">
@@ -189,6 +190,7 @@
             </article>
 
             <section class="ad">
+              <h6>Advertismentss</h6>
               <p class="declare">Advertisement</p>
               <p class="awithus"><a href="#">Advertise with us!</a></p>
               <div class="ad-content cf">
@@ -259,14 +261,16 @@
    <aside id="sidebar" class="sb">
     <div class="col side">
       <section class="mise sf cf">
-        <form id="search" method="post" action="#">
-          <label for="searchb" class="searchl">Search on Smashing Magazine</label>
-          <input type="text" id="searchb" placeholder="e.g. JavaScript">
+        <h6>site search</h6>
+        <form id="search-form" method="post" action="#">
+          <label for="searchbox" class="searchl">Search on Smashing Magazine</label>
+          <input type="text" id="searchbox" placeholder="e.g. JavaScript">
           <button type="submit" class="button-search">Search</button>
         </form>
       </section>
       
       <section class="bw faw">
+        <h6>become a sponsor</h6>
       <p class="awithus"><a href="#">Become a sponsor!</a></p>
     </section>
 
@@ -279,7 +283,7 @@
       </h3>
       <p>Subscribe to our email newsletter for useful tips and valuable resources, sent out every second Tuesday.</p>
       <div class="mcf">
-        <form method="post" action="">
+        <form method="post" action="example.html">
           <label for="nl-email" class="sr">Please provide us with your email address:</label>
           <input id="nl-email" name="EMAIL" type="text" placeholder="email address">
           <button id="nl-submit" type="submit" name="subscribe">Subscribe</button>
@@ -291,6 +295,7 @@
     </section>
 
     <section class="so wg">
+      <h6>advertisements</h6>
       <div class="fir">
         <a href="#">
           <img alt="#" src="assets/design_book.png">
@@ -312,6 +317,7 @@
     </section>
 
     <section class="mt wg">
+      <h6>sponsors</h6>
       <a href="#">
         <img alt="#" src="assets/mediatemple.svg">
       </a>
